--- a/app/src/main/res/layout/listview_todo.xml
+++ b/app/src/main/res/layout/listview_todo.xml
@@ -10,9 +10,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textSize="36sp"
-        android:paddingLeft="5sp"
-        android:paddingTop="5sp" />
+        android:textSize="28sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,8 +21,7 @@
         android:layout_toRightOf="@+id/textViewDate"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:padding="5sp"
-        android:gravity="center" />
+        android:padding="5sp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -47,7 +44,6 @@
         android:layout_toRightOf="@+id/textViewDate"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignBottom="@+id/textViewTime"
-        android:padding="5sp" />
+        android:layout_alignBottom="@+id/textViewTime" />
 
 </RelativeLayout>
