--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,9 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#1A237E</color>
-    <color name="colorAccent">#B3E5FC</color>
+    <color name="colorAccent">#01579B</color>
 
-    <color name="green">#4CAF50</color>
-    <color name="red">#F44336</color>
+    <color name="green">#69F0AE</color>
+    <color name="red">#FF5252</color>
     <color name="white">#FFFFFF</color>
 </resources>
