--- a/app/src/main/res/layout/activity_todo.xml
+++ b/app/src/main/res/layout/activity_todo.xml
@@ -123,12 +123,22 @@
         android:layout_alignRight="@+id/snackbarPosition"
         android:layout_alignEnd="@+id/snackbarPosition" />
 
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/important"
+        android:id="@+id/checkBoxImportant"
+        android:layout_below="@+id/checkBoxDone"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/snackbarPosition"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/buttonSave">
     </android.support.design.widget.CoordinatorLayout>
 
 </RelativeLayout>
