--- a/app/src/main/res/layout/activity_todo.xml
+++ b/app/src/main/res/layout/activity_todo.xml
@@ -5,7 +5,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="br.com.ceolato.todo.TodoActivity">
+    tools:context=".TodoListActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,6 +23,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/editTextTitle"
         android:layout_below="@+id/textViewTitle"
+        android:hint="@string/titleHint"
+        android:textColorHint="@color/colorSecondaryText"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
@@ -46,6 +48,8 @@
         android:ems="10"
         android:id="@+id/editTextDescription"
         android:layout_below="@+id/textViewDescription"
+        android:hint="@string/descriptionHint"
+        android:textColorHint="@color/colorSecondaryText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/textViewDescription"
@@ -100,11 +104,20 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/editTextTime"
+        android:text="@string/important"
+        android:id="@+id/checkBoxImportant"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/done"
         android:id="@+id/checkBoxDone"
+        android:layout_below="@+id/checkBoxImportant"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/editTextTime"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:checked="false" />
@@ -123,14 +136,6 @@
         android:layout_alignRight="@+id/snackbarPosition"
         android:layout_alignEnd="@+id/snackbarPosition" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/important"
-        android:id="@+id/checkBoxImportant"
-        android:layout_below="@+id/checkBoxDone"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
