--- a/app/src/main/res/layout/content_todo_list.xml
+++ b/app/src/main/res/layout/content_todo_list.xml
@@ -7,11 +7,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_todo_list" tools:context=".TodoActivity">
+    tools:showIn="@layout/activity_todo_list" tools:context=".TodoListActivity">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewToDo"
+        android:scrollbars="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listViewToDo" />
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
