--- a/app/src/main/res/menu/menu_todo.xml
+++ b/app/src/main/res/menu/menu_todo.xml
@@ -1,6 +1,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".TodoActivity">
+
+    <item android:id="@+id/action_delete" android:icon="@drawable/ic_delete"
+        android:title="@string/action_save" app:showAsAction="always" />
+
+    <item android:id="@+id/action_archive" android:icon="@drawable/ic_archive"
+        android:title="@string/action_archive" app:showAsAction="always" />
+
+    <item android:id="@+id/action_save" android:icon="@drawable/ic_save"
+        android:title="@string/action_delete" app:showAsAction="always" />
+
+
+    <item android:id="@+id/action_about" android:title="@string/action_about"
+        android:orderInCategory="101" app:showAsAction="never"/>
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
