--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="green">#69F0AE</color>
     <color name="red">#FF5252</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
